correcciones emilio